--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ajv": "^8.17.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
     "tailwindcss": "^4.1.14",
